# ns-3-dev

./: .clang-tidy  .gitattributes  .plumber.yaml  AGENTS.md  CHANGES.md  CMakeLists.txt  CMakePresets.json  GPU_INTEGRATION_PLAN.md  RELEASE_NOTES.md  cali.sh  check-unnecessary-includes.py  cleanup.py  ns3  pyproject.toml  setup.cfg  setup.py  test.py  wscript
.github/workflows/: per_commit.yml
bindings/python/: ns__init__.py
build-support/: filter-module-symbols-to-export.py  macros-and-definitions.cmake
build-support/custom-modules/: ns3-check-dependencies.cmake  ns3-cmake-package.cmake  ns3-compiler-workarounds.cmake  ns3-configtable.cmake  ns3-executables.cmake  ns3-fetch-optional-modules-dependencies.cmake  ns3-filter-modules.cmake  ns3-lock.cmake  ns3-module-macros.cmake  ns3-platform-support.cmake
build-support/pip-wheel/: auditwheel-exclude-list.py
buildsupport/: macros_and_definitions.cmake
doc/manual/: Makefile
doc/models/: Makefile
doc/ns3_html_theme/: get_version.sh
examples/channel-models/: three-gpp-leo-constellation.cc  three-gpp-v2v-channel-example.cc
examples/energy/: energy-model-example.cc  energy-model-with-harvesting-example.cc
examples/error-model/: simple-error-model.cc
examples/ipv6/: fragmentation-ipv6-PMTU.cc  fragmentation-ipv6-two-MTU.cc  fragmentation-ipv6.cc  icmpv6-redirect.cc  loose-routing-ipv6.cc  ping6-example.cc  radvd-one-prefix.cc  radvd-two-prefix.cc  wsn-ping6.cc
examples/matrix-topology/: matrix-topology.cc
examples/mtp/: dctcp-example-mtp.cc  dynamic-global-routing-mtp.cc  queue-discs-benchmark-mtp.cc  ripng-simple-network-mtp.cc  simple-multicast-flooding-mtp.cc  socket-bound-tcp-static-routing-mtp.cc  tcp-bbr-example-mtp.cc  tcp-pacing-mtp.cc  tcp-star-server-mtp.cc  tcp-validation-mtp.cc
examples/naming/: object-names.cc
examples/realtime/: realtime-udp-echo.cc
examples/routing/: dynamic-global-routing.cc  global-injection-slash32.cc  global-routing-multi-switch-plus-router.cc  global-routing-slash32.cc  manet-routing-compare.cc  mixed-global-routing.cc  rip-simple-network.cc  ripng-simple-network.cc  simple-alternate-routing.cc  simple-global-routing.cc  simple-multicast-flooding.cc  simple-routing-ping6.cc  simple-routing-ping6.py  static-routing-slash32.cc
examples/socket/: socket-bound-static-routing.cc  socket-bound-tcp-static-routing.cc  socket-options-ipv4.cc  socket-options-ipv6.cc
examples/stats/: wifi-example-apps.cc  wifi-example-sim.cc
examples/tcp/: dctcp-example.cc  star.cc  tcp-bulk-send.cc  tcp-large-transfer.cc  tcp-linux-reno.cc  tcp-pacing.cc  tcp-star-server.cc  tcp-validation.cc  tcp-variants-comparison.cc
examples/traffic-control/: cobalt-vs-codel.cc  red-vs-fengadaptive.cc  red-vs-nlred.cc
examples/tutorial/: fifth.cc  first.cc  fourth.cc  second.cc  seventh.cc  sixth.cc  third.cc
examples/udp/: udp-echo.cc
examples/udp-client-server/: udp-client-server.cc  udp-trace-client-server.cc
examples/wireless/: examples-to-run.py  mixed-wired-wireless.cc  wifi-80211e-txop.cc  wifi-80211n-mimo.cc  wifi-adhoc.cc  wifi-ap.cc  wifi-backward-compatibility.cc  wifi-clear-channel-cmu.cc  wifi-dsss-validation.cc  wifi-he-network.cc  wifi-ht-network.cc  wifi-mixed-network.cc  wifi-multi-tos.cc  wifi-ofdm-eht-validation.cc  wifi-ofdm-he-validation.cc  wifi-ofdm-ht-validation.cc  wifi-ofdm-validation.cc  wifi-ofdm-vht-validation.cc  wifi-pcf.cc  wifi-power-adaptation-distance.cc  wifi-simple-adhoc.cc  wifi-simple-interference.cc  wifi-sleep.cc  wifi-spatial-reuse.cc  wifi-spectrum-per-example.cc  wifi-spectrum-per-interference.cc  wifi-spectrum-saturation-example.cc  (+3 more)
mezzanine-gpu-slides/: .gitignore  README.md  bench.sh  cpu_sinr.txt  gpu_sinr.txt  main.tex  rem_cpu.txt  rem_gpu.txt
src/: create-module.py
src/spectrum/: CMakeLists.txt
src/spectrum/doc/: spectrum.rst
src/spectrum/examples/: CMakeLists.txt  sionna-rt-channel-example.cc  sls-chan-example.cc  three-gpp-channel-example.cc  three-gpp-ntn-channel-example.cc
src/spectrum/helper/: adhoc-aloha-noack-ideal-phy-helper.cc  adhoc-aloha-noack-ideal-phy-helper.h  spectrum-analyzer-helper.cc  spectrum-analyzer-helper.h  spectrum-helper.cc  spectrum-helper.h  tv-spectrum-transmitter-helper.cc  tv-spectrum-transmitter-helper.h  waveform-generator-helper.cc  waveform-generator-helper.h
src/spectrum/model/: aloha-noack-mac-header.cc  aloha-noack-mac-header.h  aloha-noack-net-device.cc  aloha-noack-net-device.h  constant-spectrum-propagation-loss.h  fasttrigo.h  friis-spectrum-propagation-loss.h  gpu-batch-smoke.cc  half-duplex-ideal-phy-signal-parameters.cc  half-duplex-ideal-phy-signal-parameters.h  half-duplex-ideal-phy.cc  half-duplex-ideal-phy.h  matrix-based-channel-model.h  microwave-oven-spectrum-value-helper.cc  microwave-oven-spectrum-value-helper.h  multi-model-spectrum-channel.cc  multi-model-spectrum-channel.h  non-communicating-net-device.cc  non-communicating-net-device.h  single-model-spectrum-channel.cc  single-model-spectrum-channel.h  sionna-rt-channel-model.cc  sionna-rt-channel-model.h  sls-chan-validate.py  sls-chan-validation.cc  sls-chan-wgpu.cc  sls-chan-wgpu.h  sls-chan.wgsl  sls-phase-timer.h  spectrum-analyzer.cc  spectrum-analyzer.h  spectrum-channel.cc  spectrum-channel.h  spectrum-converter.h  spectrum-error-model.cc  spectrum-error-model.h  spectrum-interference.cc  spectrum-interference.h  spectrum-model-300kHz-300GHz-log.h  spectrum-model-ism2400MHz-res1MHz.h  (+24 more)
src/spectrum/test/: spectrum-interference-test.cc  spectrum-value-test.cc  three-gpp-channel-test-suite.cc  tv-helper-distribution-test.cc
src/spectrum/utils/: test-3gpp.cc
src/test/: CMakeLists.txt  csma-system-test-suite.cc
src/test/ns3tc/: fq-cobalt-queue-disc-test-suite.cc  fq-codel-queue-disc-test-suite.cc  fq-pie-queue-disc-test-suite.cc
src/test/ns3tcp/: ns3tcp-loss-test-suite.cc  nsctcp-loss-test-suite.cc
src/test/ns3wifi/: wifi-ac-mapping-test-suite.cc
utils/: CMakeLists.txt  bench-packets.cc  bench-scheduler.cc  codespell-ignored-lines  python-unit-tests.py  speedup.py  trim-trailing-whitespace.py  wscript
(+2368 files in other folders)
