[metadata]
name = nsnam
description = ns-3 network simulator and visualizer
long_description = file: README.md
long_description_content_type = text/markdown
author = Gabriel Ferreira
author_email = gabrielcarvfer@gmail.com
license = GPL
platforms = any
url = https://gitlab.com/nsnam/ns-3-dev

project_urls =
    Tracker = https://gitlab.com/nsnam/ns-3-dev/-/issues
    Documentation = https://www.nsnam.org/docs/tutorial/html/index.html
    Source = https://gitlab.com/nsnam/ns-3-dev

keywords =
    network-simulator

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    #Operating System :: MacOS
    #Operating System :: Microsoft :: Windows
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: C++
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    cppyy

